--- a/sass/custom/_keyframes-detail-v2.scss
+++ b/sass/custom/_keyframes-detail-v2.scss
@@ -60,12 +60,12 @@
 @keyframes anim-gallery-figure-in {
   from {
     opacity: 0;
-    transform: translateY(50px);
+    transform: translateY(50px) translateZ(0px);
   }
 
   to {
     opacity: 1;
-    transform: translateY(0px);
+    transform: translateY(0px) translateZ(0px);
   }
 }
 
